#5 ex4 new diagram (graphical representation)

--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -205,18 +205,20 @@ El \textit{dataset} está guardado con codificación \textbf{UTF-8}, y cada regi
 
 \vspace{-1.5em}\section{Representación gráfica}\vspace{-1.0em}
 
-A continuación se muestra el flujo económico analizado en este proyecto; el objetivo del \textit{dataset} es reunir la información pertinente a los anuncios de Fotocasa e Idealista.
+A continuación se muestra el flujo de este proyecto:
 
 \begin{figure}[h]
 	\centering
 	\captionsetup{font={normalsize}}
-	\fbox{\includegraphics[width=\linewidth]{graphical-representation}}
-	\caption{Representación gráfica del \textit{dataset} y proyecto}
+	\fbox{\includegraphics[width=\linewidth]{graphical-representation1}}
+	\caption{Representación gráfica del proyecto hasta llegar al \textit{dataset} final}
 \end{figure}
 
-Los anunciantes, que pueden ser tanto propietarios particulares como inmobiliarias, utilizan los portales de compraventa en el mercado inmobiliario para difundir sus anuncios de inmuebles en venta. Por la creación de un anuncio, los portales cobran una tasa; también obtienen dinero por ocultar la dirección concreta en el caso de Fotocasa, y por último, cobran una cantidad para promocionar o destacar el anuncio.
+Los \textbf{anunciantes}, que pueden ser tanto propietarios particulares como inmobiliarias, utilizan los portales de compraventa en el mercado inmobiliario para difundir sus \textbf{anuncios} de inmuebles. Por la creación de un anuncio, los \textbf{portales cobran} una tasa y la encarecen por otros servicios adicionales, como ocultar la dirección concreta en el caso de Fotocasa o promocionar o destacar el anuncio.
 
-Los portales inmobiliarios ponen a disposición de los compradores dichos anuncios y ayudan a ponerles en contacto con los anunciantes, con los que cerrarán el trato fuera del portal.
+Los portales inmobiliarios ponen a disposición de los \textbf{compradores} dichos anuncios y ayudan a ponerles en contacto con los anunciantes, con los que cerrarán el trato fuera del portal.
+
+En \textbf{este proyecto} se analizan dichos portales inmobiliarios y se vuelcan en el \textit{dataset} final la información de los anuncios sobre \textbf{viviendas en venta} en F\textbf{otocasa e Idealista}, en concreto de los distritos de \textbf{Villaverde} y \textbf{Salamanca} de Madrid, como ya se ha explicado en apartados anteriores. El resultado es un \textbf{CSV} con un registro por cada una de dichas viviendas y sus \textbf{planos} incluidos en los anuncios de Idealista, mientras que si el anuncio es de Fotocasa se han descargado todas las \textbf{fotografías} al carecer de la opción específica del plano. 
 
 \newpage
 
