--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -177,21 +177,21 @@ Asimismo, cabe destacar que el mercado inmobiliario en España se ha caracteriza
 
 Teniendo presente esta situación de cambios económicos y normativos, y no existiendo un registro público de viviendas en venta actualizado, se ha decidido obtener la información de las viviendas en venta de los portales inmobiliarios de \textbf{Idealista} y \textbf{Fotocasa}. Esta decisión se fundamenta en que son los portales \textbf{más visitados} en España, según los datos de febrero de \href{https://www.similarweb.com/top-websites/spain/category/business-and-consumer-services/real-estate/}{\textit{similarweb}}, que publica las métricas oficiales de los sitios web de todo el mundo. Además, esta clasificación de visitas se mantiene en los últimos años, por lo que no se prevé que varíe en un corto periodo de tiempo. Asimismo, es interesante que estos portales trabajan tanto con \textbf{inmobiliarias} como con \textbf{particulares} que desean vender inmuebles, por lo que proporcionan una información amplia sobre el tema de interés del proyecto.
 
-\begin{center}
-	\vspace{-0.5cm}
-	{\color{uocblue}\rule{0.75\linewidth}{1pt}}
-	\vspace{-0.5cm}
-\end{center}
+%\begin{center}
+%	\vspace{-0.5cm}
+%	{\color{uocblue}\rule{0.75\linewidth}{1pt}}
+%	\vspace{-0.5cm}
+%\end{center}
 
 \vspace{-1.5em}\section{Houses for sale in the Salamanca and Villaverde district of Madrid in April 2022}\vspace{-1.0em}
 
 Debido a la gran cantidad de conjuntos de datos existentes sobre la temática seleccionada, para el \textit{dataset} resultante se ha optado por un título \textbf{muy descriptivo} a la par que \textbf{concreto}, de modo que solo con él se pueda saber el contenido del mismo. Además, debido a la volatilidad del mercado inmobiliario, se ha decidido incluir el mes de extracción de los datos.
 
-\begin{center}
-	\vspace{-0.5cm}
-	{\color{uocblue}\rule{0.75\linewidth}{1pt}}
-	\vspace{-0.5cm}
-\end{center}
+%\begin{center}
+%	\vspace{-0.5cm}
+%	{\color{uocblue}\rule{0.75\linewidth}{1pt}}
+%	\vspace{-0.5cm}
+%\end{center}
 
 \vspace{-1.5em}\section{Descripción del \textit{dataset}}\vspace{-1.0em}
 
@@ -210,7 +210,7 @@ A continuación se muestra el flujo de este proyecto:
 \begin{figure}[h]
 	\centering
 	\captionsetup{font={normalsize}}
-	\fbox{\includegraphics[width=\linewidth]{graphical-representation1}}
+	\fbox{\includegraphics[width=\linewidth]{graphical-representation}}
 	\caption{Representación gráfica del proyecto hasta llegar al \textit{dataset} final}
 \end{figure}
 
@@ -219,8 +219,6 @@ Los \textbf{anunciantes}, que pueden ser tanto propietarios particulares como in
 Los portales inmobiliarios ponen a disposición de los \textbf{compradores} dichos anuncios y ayudan a ponerles en contacto con los anunciantes, con los que cerrarán el trato fuera del portal.
 
 En \textbf{este proyecto} se analizan dichos portales inmobiliarios y se vuelcan en el \textit{dataset} final la información de los anuncios sobre \textbf{viviendas en venta} en F\textbf{otocasa e Idealista}, en concreto de los distritos de \textbf{Villaverde} y \textbf{Salamanca} de Madrid, como ya se ha explicado en apartados anteriores. El resultado es un \textbf{CSV} con un registro por cada una de dichas viviendas y sus \textbf{planos} incluidos en los anuncios de Idealista, mientras que si el anuncio es de Fotocasa se han descargado todas las \textbf{fotografías} al carecer de la opción específica del plano. 
-
-\newpage
 
 \vspace{-1.5em}\section{Contenido}\vspace{-1.0em}
 
@@ -280,17 +278,52 @@ Por otro lado, se probó la \textbf{utilización de \textit{proxies}} para evita
 
 \vspace{-1.5em}\subsection*{Detalles del \textit{scraper} de Fotocasa}\vspace{-1em}
 
-explicar el lazy load
+El portal inmobiliario \textbf{Fotocasa} cuenta con un sistema de carga perezosa o \textit{\textbf{lazy load}} en las páginas de navegación. Concretamente, el estilo de las \textit{cards} que representan los inmuebles se va cargando a medida que aparecen en la sección visible del navegador; es decir, a medida que el usuario va navegando por la página (\textit{scroll}).
+
+Esta carga perezosa supuso un reto a la hora de obtener la información general de cada inmueble mediante el \textit{scraping} de las páginas de navegación, ya que las clases a las que pertenecía cada inmueble cambiaban con el tiempo.
+
+A este respecto, se presentaron 2 desafíos: por un lado, identificar el \textit{lazy load}, ya que el portal lo manejaba de forma transparente al usuario y solo se encontró la carga perezosa mediante depuración en un navegador aparte; por otro lado, encontrar la forma de evitar la carga perezosa.
+
+Para solucionar este problema, se utilizó la \textbf{ejecución de \textit{scripts} de JavaScript} en el navegador Selenium para imitar el comportamiento de navegación por la página, realizando la acción de \textit{scroll down} hasta llegar a la última \textit{card} de inmueble de la página.
 
 \vspace{-1.5em}\subsection*{Detalles del \textit{scraper} de Idealista}\vspace{-1em}
 
-explicar el sistema de backups
+El portal inmobiliario \textbf{Idealista} cuenta con un sistema de bloqueos para \textit{bots} utilizando \textit{captchas} para evitar sus peticiones. Este fue el principal escollo en el diseño del \textit{scraper}, y como se explica en esta misma sección, se solucionó parcialmente mediante cambios de \textit{user agent}, la utilización de un \textit{captcha solver} gratuito y esperas activas (no se utilizaron \textit{proxies} finalmente dado que apenas producían beneficio pero introducían grandes retardos en el sistema de \textit{scraping}).
+
+Debido a todas las salvaguardas para evitar la detección de Idealista, el \textit{scraper} de este portal inmobiliario dedica mucho tiempo a las esperas activas, dilatando en gran medida el tiempo requerido para obtener toda la información del sitio web. 
+
+Una consecuencia de que la ejecución completa del programa se extienda tanto en el tiempo es que la fase de pruebas es muy costosa. Así mismo, si sucede un error inesperado (dentro o fuera del programa) y el \textit{scraper} se bloquea, el coste también es muy grande.
+
+Teniendo estas consideraciones en mente, se ha decidido implementar un sistema de recuperación (\textit{backup}) y reanudación del \textit{scraping} mediante una sincronización cada \verb|X| \textit{links} visitados.
+
+Este \textbf{sistema de recuperación y reanudación} funciona de tal manera que se guardan en disco y se recuperan unos objetos de estado, concretamente una lista de los \textit{links} de navegación que quedan por visitar, una lista de los \textit{links} de inmuebles por visitar y una lista de la información de los inmuebles que hay que guardar en disco en la próxima sincronización.
+
+Para evitar que la memoria RAM se llene antes de que el \textit{scraping} se haya completado \textemdash este es uno de los errores que pueden suceder, que la máquina se quede sin memoria para cargar más páginas \textemdash, solo se guarda la información de los inmuebles que no se encuentra ya salvada en disco en el fichero CSV. Cuando se realiza la sincronización, además de guardar un \textit{pickle} de los objetos de estado se actualiza también el fichero CSV volcando la nueva información y liberando la memoria RAM asociada.
 
 \vspace{-1.5em}\subsection*{Descripción de los campos del \textit{dataset}}\vspace{-1em}
 
-descripción de los campos del dataset
+A continuación se procede a describir los distintos campos del conjunto de datos final obtenido del \textit{scraping} de Fotocasa e Idealista. Se trata de un \textit{dataset} de 16 campos con 3.545 registros, que ocupa en total 9.8MB en disco. Cada registro puede identificarse de forma única mediante el par \verb|(id, source)|.
 
-\newpage
+\begin{itemize}[topsep=0cm,partopsep=0cm]
+	\setlength\itemsep{-0.5em}
+	\item \textbf{id}: entero con el identificador numérico del inmueble, dado por Idealista o Fotocasa.
+	\item \textbf{\textit{source}}: cadena de texto que identifica la fuente de la que se ha obtenido la información del inmueble (\verb|"fotocasa"/"idealista"|).
+	\item \textbf{url}: cadena de texto con la dirección de la página web de la que se ha obtenido la información del inmueble.
+	\item \textbf{\textit{title}}: cadena de texto con el título del anuncio del inmueble.
+	\item \textbf{\textit{location}}: cadena de texto con el barrio al que pertenece el inmueble \\ (\verb|"barrio-de-salamanca"/"villaverde"|).
+	\item \textbf{\textit{price}}: entero o cadena de texto con el precio del inmueble fijado en el anuncio.
+	\item \textbf{m2}: entero con los m\textsuperscript{2} (metros cuadrados) del inmueble.
+	\item \textbf{\textit{rooms}}: entero con el número de habitaciones del inmueble. El campo puede estar vacío.
+	\item \textbf{\textit{floor}}: cadena de texto con el piso o planta del inmueble. Puede contener información adicional, como por ejemplo si se trata de un inmueble con ascensor o una orientación interior o exterior.
+	\item \textbf{\textit{num-photos}}: entero con el número de fotografías disponibles en el anuncio.
+	\item \textbf{\textit{floor-plan}}: entero que representa si el anuncio cuenta con un plano del inmueble (\verb|1|) o no (\verb|0|).
+	\item \textbf{\textit{view3d}}: entero que representa si el anuncio cuenta con una vista en 3D del inmueble (\verb|1|) o no (\verb|0|).
+	\item \textbf{\textit{video}}: entero que representa si el anuncio cuenta con un vídeo que muestra el inmueble (\verb|1|) o no (\verb|0|).
+	\item \textbf{\textit{home-staging}}: entero que representa si el anuncio cuenta con la característica de \textit{home staging} (\verb|1|) \textemdash muestra cómo quedarían algunas habitaciones del inmueble con otro estilo, cambiando muebles, etcétera \textemdash  o no (\verb|0|).
+	\item \textbf{\textit{description}}: cadena de texto con la descripción del anunciante para el inmueble.
+	\item \textbf{\textit{photo\_urls}}: lista con las direcciones de las fotografías del inmueble anunciado.
+\end{itemize}
+
 \vspace{-1.5em}\section{Agradecimientos}\vspace{-1.0em}
 
 A continuación se aborda el apartado de agradecimientos divido en tres bloques debido a la complejidad del proyecto planteado y la necesidad de diferenciar claramente entre ellos. 
@@ -355,7 +388,6 @@ Además, se hace extensible este agradecimiento a las personas mencionadas en \t
 
 Por último, se agradece también a Armin Sebastian, creador de la extensión \href{https://chrome.google.com/webstore/detail/buster-captcha-solver-for/mpbjkejclgfgadiemmefgebjfooflfhl}{Buster: Captcha Solver for Humans}, que ha hecho factible realizar \textit{web scrapping} sobre Idealista; y al sitio web \href{https://hidemy.name/proxy-list/}{hidemy.name} por su base de datos de \textit{proxies}.
 
-\newpage
 \vspace{-1.5em}\section{Inspiración}\vspace{-1em}
 
 Conocer la \textbf{situación del mercado inmobiliario} es siempre interesante debido a que es un sector muy importante en España. Por ello, en muchos momentos ha servido de \textbf{termómetro} sobre la situación económica e incluso ha llegado a desencadenar la mayor crisis que se ha vivido en lo que llevamos de siglo, tanto en este país como en el mundo. 
@@ -396,8 +428,7 @@ Teniendo en cuenta esta información, las preguntas que se pretenden resolver en
 
 Por último, cabe destacar que gracias a la capacidad de generalización del proyecto desarrollado, estas preguntas se pueden responder sobre \textbf{cualquier zona de España}, comparándolas tanto de la misma localidad como de dos diferentes simplemente cambiando las URL de inicio en las llamadas al programa. Por ejemplo, se podría haber hecho sobre el distrito más caro de Madrid y el de Barcelona, o incluso sobre todos los distritos de todas las ciudades de España.
 
-\newpage
-\vspace{-1.5em}\section{Licencia }\vspace{-1em}
+\vspace{-1.5em}\section{Licencia}\vspace{-1em}
 
 La licencia seleccionada es\textbf{ Atribución-NoComercial-CompartirIgual 4.0 Internacional (CC BY-NC-SA 4.0)} debido a que es la que más se ajusta a las necesidades de este proyecto y las preferencias de las integrantes del equipo de trabajo por los siguientes motivos:
 
@@ -411,18 +442,17 @@ La licencia seleccionada es\textbf{ Atribución-NoComercial-CompartirIgual 4.0 I
 
 Como se puede observar, el mayor interés a la hora de seleccionar esta licencia, por tanto, es favorecer el \textbf{flujo de conocimiento} con fines exclusivamente académicos a la vez que preservar la \textbf{voluntad de los propietarios} de los datos originales. 
 
-\newpage
 \vspace{-1.5em}\section{Código}\vspace{-1em}
 
 El \textbf{código} para el desarrollo de este proyecto se puede consultar al completo dentro de la carpeta \textit{house-scraper} en el siguiente repositorio de Github: 
 
 \vspace{-1em}\begin{center}\url{https://github.com/plazarotello/web-scraping}\end{center}\vspace{-1em}
 
-\begin{center}
-	\vspace{-0.5cm}
-	{\color{uocblue}\rule{0.75\linewidth}{1pt}}
-	\vspace{-0.5cm}
-\end{center}
+%\begin{center}
+%	\vspace{-0.5cm}
+%	{\color{uocblue}\rule{0.75\linewidth}{1pt}}
+%	\vspace{-0.5cm}
+%\end{center}
 
 \vspace{-1.5em}\section{Dataset}\vspace{-1em}
 
@@ -434,11 +464,11 @@ Además, como se ha especificado a lo largo del proyecto, se han descargado las 
 
 Para facilitar que se valore la gestión de este \textbf{contenido audiovisual} en el proyecto, se ha compartido el enlace privado de Google Drive con Mireia Calvo González, profesora colaboradora a cargo del aula 2 de la asignatura Tipología y ciclo de vida de los datos de la Universitat Oberta de Catalunya (UOC). 
 
-\begin{center}
-	\vspace{-0.5cm}
-	{\color{uocblue}\rule{0.75\linewidth}{1pt}}
-	\vspace{-0.5cm}
-\end{center}
+%\begin{center}
+%	\vspace{-0.5cm}
+%	{\color{uocblue}\rule{0.75\linewidth}{1pt}}
+%	\vspace{-0.5cm}
+%\end{center}
 
 \vspace{-1.5em}\section*{Tabla de contribuciones}\vspace{-1em}
 
